--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -92,9 +92,12 @@ main {
 
 /* about section styles */
 
+section {
+    margin-top: 130px;
+}
+
 .about {
     text-align: center;
-    margin-top: 130px;
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -102,6 +105,7 @@ main {
 }
 
 .section-title {
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
     margin-bottom: 30px;
@@ -127,4 +131,68 @@ main {
     color: #474747;
     font-weight: 700;
     font-size: 20px;
+}
+
+/* What i do styles */
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+
+}
+.skills-container {
+    display: flex;
+    gap: 24px}
+.skill-title {
+    color: #181818;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description {
+    color: #757575;
+    font-size: 16px;
+    line-height: 28px;
+}
+
+/* Resume Styles */
+.resume-content {
+    display:flex;
+    gap: 24px;
+}
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-title {
+    color: #474747;
+    font-weight: 700;
+    font-size: 30px;
+}
+
+.resume .title {
+    color: #474747;
+    font-weight: 700;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.resume .subtitle {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.resume .description {
+    color: #757575;
+}
+
+.resume-button {
+    margin-top: 50px;
+    text-align: center;
 }
