--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -39,7 +39,7 @@
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 nav ul {
@@ -195,4 +195,37 @@ section {
 .resume-button {
     margin-top: 50px;
     text-align: center;
+}
+
+/* contact styles */
+
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+
+.contact .section-title {
+    text-align: left;
+}
+
+.contact .section-description {
+    margin-bottom: 20px;
+}
+
+.contact input[type="text"], input[type="email"], textarea {
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+input {
+    height: 64px;
+}
+
+.contact a{
+    text-decoration: none;
+    margin-right: 10px;
 }
